--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,19 @@
-version: "3"
+version: "3.9"
+
 services:
-  backend:
-    build: .
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    environment:
+      DATABASE_URL: postgres://postgres:password@db:5432/service_based_assessment_db
     ports:
-      - "8000:5000"
-  redis:
-    image: "ubuntu:latest"
+      - "8080:8080"
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: service_based_assessment_user
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: service_based_assessment_db
