--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
