--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<projectAnalysis xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -12,7 +12,7 @@
 	<artifactId>Service-Based-Assesment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Service Based Assessment of code quality</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo projectAnalysis for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -72,4 +72,4 @@
 		</plugins>
 	</build>
 
-</project>
+</projectAnalysis>
