Added more APIs to get the files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5455/test_service_based_assessment_db
+spring.datasource.username=service_based_assessment_user
+spring.datasource.password=123456
+github.token=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
